# ripgrep

./: .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  FAQ.md  GUIDE.md  README.md  RELEASE-CHECKLIST.md  appveyor.yml  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benchsuite/: benchsuite
benchsuite/runs/2020-10-14-archlinux-frink/: raw.csv
benchsuite/runs/2022-12-16-archlinux-duff/: README.md  raw.csv  summary
ci/: build-and-publish-deb  build-and-publish-m2  build-deb  script.sh  test-complete  test_complete.sh
ci/docker/: README.md
ci/docker/aarch64-unknown-linux-gnu/: Dockerfile  build
ci/docker/powerpc64-unknown-linux-gnu/: Dockerfile  build
ci/docker/s390x-unknown-linux-gnu/: Dockerfile  build
ci/docker/x86_64-unknown-linux-musl/: Dockerfile
complete/: _rg
crates/cli/: Cargo.toml  README.md
crates/cli/src/: decompress.rs  escape.rs  hostname.rs  human.rs  lib.rs  pattern.rs  process.rs  wtr.rs
crates/core/: app.rs  args.rs  config.rs  logger.rs  main.rs  messages.rs  path_printer.rs  search.rs  subject.rs
crates/core/flags/: defs.rs  hiargs.rs  mod.rs  parse.rs
crates/core/flags/complete/: fish.rs  mod.rs  rg.zsh  zsh.rs
crates/core/flags/doc/: template.long.help  template.rg.1  template.short.help  version.rs
crates/globset/: Cargo.toml  README.md
crates/globset/benches/: bench.rs
crates/globset/src/: glob.rs  lib.rs  serde_impl.rs
crates/grep/: Cargo.toml  README.md
crates/grep/examples/: simplegrep.rs
crates/grep/src/: lib.rs
crates/ignore/: Cargo.toml  README.md
crates/ignore/examples/: walk.rs
crates/ignore/src/: default_types.rs  dir.rs  gitignore.rs  lib.rs  overrides.rs  pathutil.rs  types.rs  walk.rs
crates/matcher/: Cargo.toml  README.md
crates/matcher/src/: interpolate.rs  lib.rs
crates/matcher/tests/: test_matcher.rs  tests.rs  util.rs
crates/pcre2/: Cargo.toml  README.md
crates/pcre2/src/: error.rs  lib.rs  matcher.rs
crates/printer/: Cargo.toml  README.md
crates/printer/src/: color.rs  counter.rs  hyperlink.rs  hyperlink_aliases.rs  json.rs  jsont.rs  lib.rs  path.rs  standard.rs  stats.rs  summary.rs  util.rs
crates/regex/: Cargo.toml  README.md
crates/regex/src/: ast.rs  ban.rs  config.rs  crlf.rs  error.rs  lib.rs  literal.rs  literalold.rs  matcher.rs  multi.rs  non_matching.rs  strip.rs  util.rs  word.rs
crates/searcher/: Cargo.toml  README.md
crates/searcher/examples/: search-stdin.rs
crates/searcher/src/: lib.rs  line_buffer.rs  lines.rs  sink.rs  testutil.rs
crates/searcher/src/searcher/: core.rs  glue.rs  mmap.rs  mod.rs
doc/: rg.1.txt.tpl
globset/src/: glob.rs  lib.rs
grep-cli/src/: escape.rs  process.rs
grep-matcher/src/: interpolate.rs  lib.rs
grep-matcher/tests/: util.rs
grep-pcre2/src/: matcher.rs
grep-printer/: Cargo.toml
grep-printer/src/: color.rs  json.rs  summary.rs  util.rs
grep-regex/: Cargo.toml
grep-regex/src/: ast.rs  literal.rs  matcher.rs  multi.rs  non_matching.rs  util.rs  word.rs
grep-searcher/examples/: search-stdin.rs
grep-searcher/src/: lib.rs  line_buffer.rs  sink.rs
grep-searcher/src/searcher/: mod.rs
ignore/: Cargo.toml
ignore/src/: dir.rs  gitignore.rs  lib.rs  types.rs  walk.rs
pkg/brew/: ripgrep-bin.rb
src/: app.rs  args.rs  search.rs
tests/: binary.rs  feature.rs  json.rs  misc.rs  multiline.rs  regression.rs  util.rs
