[package]
name = "grep-cli"
version = "0.1.10"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Utilities for search oriented command line applications.
"""
documentation = "https://docs.rs/grep-cli"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/cli"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/cli"
readme = "README.md"
keywords = ["regex", "grep", "cli", "utility", "util"]
license = "Unlicense OR MIT"
edition = "2021"

[dependencies]
bstr = { version = "1.6.2", features = ["std"] }
globset = { version = "0.4.14", path = "../globset" }
log = "0.4.20"
termcolor = "1.3.0"

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1.6"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2.148"
