[package]
name = "grep-matcher"
version = "0.1.7"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A trait for regular expressions, with a focus on line oriented search.
"""
documentation = "https://docs.rs/grep-matcher"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/matcher"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/matcher"
readme = "README.md"
keywords = ["regex", "pattern", "trait"]
license = "Unlicense OR MIT"
autotests = false
edition = "2021"

[dependencies]
memchr = "2.6.3"

[dev-dependencies]
regex = "1.9.5"

[[test]]
name = "integration"
path = "tests/tests.rs"
